--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">✨ Арома-Бонус ✨</div>
+            <div class="logo"> Арома-Бонус </div>
             <div class="subtitle">Собирайте баллы и получайте скидки на косметику и эфирные масла!</div>
             <button class="admin-access" id="adminAccessBtn">🔑 Админ вход</button>
             <div class="tabs">
